The provided code appears to be a Python class implementation for calculating coverage in different rule processing systems. The class seems to have several methods and attributes that are used to calculate the coverage of AMIE, Spider, and ILP rules.
Here's a refactored version of the code with some improvements:

```python
import json
import logging
import os

# Set up logging
logging.basicConfig(level=logging.INFO)

class RuleCoverageCalculator:
    def __init__(self):
        self.report_dir = 'report'
        self.rules_dir = 'rules'
        self.amie_results_file = f'{self.rules_dir}/amie_{os.getpid()}.json'
        self.spider_results_file = f'{self.rules_dir}/spider_{os.getpid()}.json'
        self.ilp_results_file = f'{self.rules_dir}/popper_{os.getpid()}.json'

    def calculate_coverage(self, database):
        # Calculate AMIE coverage
        amie_coverage = self.calculate_amie_coverage(database)
        # Calculate Spider coverage
        spider_coverage = self.calculate_spider_coverage(database)
        # Calculate ILP coverage
        ilp_coverage = self.calculate_ilp_coverage(database)

        return {
            'database': database,
            'amie': amie_coverage,
            'spider': spider_coverage,
            'ilp': ilp_coverage
        }

    def calculate_amie_coverage(self, database):
        # Load AMIE results from file
        with open(self.amie_results_file, 'r') as f:
            amie_results = json.load(f)
        # Calculate coverage
        coverage_all = sum(1 for result in amie_results if result['coverage_all'])
        errors = [result for result in amie_results if not result['coverage_all']]
        return {'coverage_all': coverage_all, 'errors': errors}

    def calculate_spider_coverage(self, database):
        # Load Spider results from file
        with open(self.spider_results_file, 'r') as f:
            spider_results = json.load(f)
        # Calculate coverage
        coverage_all = sum(1 for result in spider_resu

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -13,7 +13,7 @@ results:
   output_dir: "results"  # Directory for saving results
 
 algorithm:
-  name: "SPIDER"  # Default algorithm
+  name: "MATILDA"  # Default algorithm
 
 mlflow:
   use: false  # Set to true to log experiments to mlflow
